🐛FIX : Add findByUserId method to UserRepository and use it in UserRegisterDto for validation
Use the findByUserId method in UserRegisterDto's validateioncto heck if a user with the same userId already exists.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <div>연습</div>
 </head>
 <body>
     <h2>index.html</h2>
-    <a href="/user/register-form">회원가입</a>
-    <a href="/user/login-form">로그인</a>
-    <a href="/home">둘러보기</a>
+    <hr>
+    <a href="/user/register-form"><button>회원가입</button></a>
+    <a href="/user/login-form"><button>로그인</button></a>
+    <a href="/home"><button>둘러보기</button></a>
 </body>
 </html>
