--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,47 @@
+
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <style>
+        h2 {
+            text-align: center;
+        }
+        label {
+            display: inline-block;
+            width: 145px;
+            text-align: right;
+        }
+
+
+
+        input[type="text"],
+        input[type="password"] {
+            vertical-align: middle;
+            width: 410px;
+        }
+        form {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h2>index.html</h2>
-    <hr>
-    <a href="/user/register-form"><button>회원가입</button></a>
-    <a href="/user/login-form"><button>로그인</button></a>
-    <a href="/home"><button>둘러보기</button></a>
+<h1>index.html</h1>
+<hr>
+<a href="/user/register-form"><button>회원가입</button></a>
+<a href="/home"><button>둘러보기</button></a>
+
+
+<h2 text-align="center">Login</h2>
+<form action="/user/login-confirm" method="post">
+    <label for="userId">ID:</label>
+    <input type="text" name="userId" id="userId" required><br><br>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required><br><br>
+    <input type="submit" value="로그인">
+</form>
 </body>
 </html>
