--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -76,8 +76,11 @@
 
             <button onclick="window.location.href='/user/register-form'">Sign Up</button>
             <input type="submit" value="Log In">
-            <button onclick="window.location.href='/home'">Explore without login</button>
+<!--            <a href="/home/explore">Explore without login</a>-->
+
         </form>
+        <br>
+        <button onclick="window.location.href='/home/explore'">Explore without login</button>
     </div>
 
 </form>
