✨FEAT : Add Todos for individual users's  todoList

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -80,7 +80,7 @@
 
         </form>
         <br>
-        <button onclick="window.location.href='/home/explore'">Explore without login</button>
+        <button onclick="window.location.href='/main'">Explore without login</button>
     </div>
 
 </form>
